<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.t246osslab.easybuggy</groupId>
	<artifactId>easybuggy</artifactId>
	<version>1-SNAPSHOT</version>
	<packaging>war</packaging>

	<properties>
		<java.version>17</java.version>
		<sonar.organization>devsecops-project-01</sonar.organization>
  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<maven.compiler.source>1.8</maven.compiler.source>
    	<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<profiles>
		<profile>
			<id>JDK8-Switch</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<properties>
				<jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
				<jvm.args.gc.log.path>-Xloggc:logs/gc_%p_%t.log</jvm.args.gc.log.path>
			</properties>
		</profile>
		<profile>
			<id>JDK11-Switch</id>
			<activation>
				<jdk>11</jdk>
			</activation>
			<properties>
				<jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
				<jvm.args.gc.log.path>-Xlog:gc*:logs/gc_%p_%t.log:time,level,tags:filecount=5,filesize=10M</jvm.args.gc.log.path>
				<!-- TODO Remove these properties -->
				<jvm.args.print.heap.at.gc>-Dummy=Dummy</jvm.args.print.heap.at.gc>
				<jvm.args.print.gc.details>-Dummy=Dummy</jvm.args.print.gc.details>
				<jvm.args.print.gc.date.stamps>-Dummy=Dummy</jvm.args.print.gc.date.stamps>
				<jvm.args.gc.log.file.rotation>-Dummy=Dummy</jvm.args.gc.log.file.rotation>
				<jvm.args.number.of.gc.log.files>-Dummy=Dummy</jvm.args.number.of.gc.log.files>
				<jvm.args.gc.log.file.size>-Dummy=Dummy</jvm.args.gc.log.file.size>
			</properties>
		</profile>
	</profiles>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
      		<artifactId>junit</artifactId>
      		<version>4.13.2</version>
      		<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>org.jacoco.core</artifactId>
			<version>0.8.8</version>
		</dependency>

	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
				<source>1.8</source>
				<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.8</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>